Changed sample to use board.jpg

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "keywords": [
     "image",
     "image-color",
+    "filter",
+    "filters",
+    "processing",
+    "manipulation",
     "color",
     "transformation",
     "pixel"
